@@ -1,9 +1,18 @@
 ## -*-mode: python; fill-column: 75; encoding: utf-8; coding: utf-8-unix -*-
 
-from .files import *
+import sys
+import os
+# We would have to do this if we used absolute imports, for some calling cases
+if False and __name__ == '__main__' and not __package__:
+    __package__ = 'behaving.cmd.steps'
+    sys.path.insert(0, os.path.join(os.path.dirname(__file__), '..'))
+
+# explicit is better than implicit in Python
+from behaving.cmd.steps.files import *
+from behaving.cmd.steps.os_generic import *
 
 try:
-    from .execs import *
+    from behaving.cmd.steps.execs import *
 except ImportError:
     # These are in testing
     pass
